--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+body, html {
+    width: 100%;
+    height: 100%;
+}
+
+body {
+    background-color:#1C1829;
+    color:white
+}
